--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="_0dp">0dp</dimen>
+    <dimen name="_17sp">17sp</dimen>
+    <dimen name="_20dp">20dp</dimen>
+    <dimen name="_10dp">10dp</dimen>
+    <dimen name="_20sp">20sp</dimen>
+    <dimen name="_80dp">80dp</dimen>
+    <dimen name="_50dp">50dp</dimen>
+    <dimen name="_27sp">27sp</dimen>
+    <dimen name="_21sp">21sp</dimen>
+    <dimen name="_24sp">24sp</dimen>
 </resources>
