--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,11 @@
     </style>
 
     <style name="Theme.EcommerceApp" parent="Base.Theme.EcommerceApp" />
+
+    <style name="PrimaryButton" parent="Widget.AppCompat.Button">
+        <item name="android:textSize">@dimen/_24sp</item>
+        <item name="android:background">@drawable/main_rounded_button</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
