Worked on adding cart fragment, product fragment, subcategory fragments, adding multiple features.

--- a/app/src/main/res/layout/custom_tab_layout.xml
+++ b/app/src/main/res/layout/custom_tab_layout.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.fragment.CartFragment">
+    android:orientation="vertical">
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/txt_subcategory"
+        style="@style/NavigationViewTextAppearance"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="HERE WILL BE CART DISPLAYED FRAGMENT"
-        android:textSize="@dimen/_27sp"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="90dp"
+        android:gravity="center"
+        android:text="@string/android"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
