--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -40,6 +40,7 @@
         android:layout_height="wrap_content"
         android:textSize="@dimen/_20sp"
         android:layout_marginTop="@dimen/_10dp"
+        android:padding="@dimen/_10dp"
         android:inputType="textPersonName"
         android:background="@drawable/edittext_shape"
         app:layout_constraintEnd_toStartOf="@id/vertical_right"
@@ -63,6 +64,7 @@
         android:layout_height="wrap_content"
         android:textSize="@dimen/_20sp"
         android:layout_marginTop="@dimen/_10dp"
+        android:padding="@dimen/_10dp"
         android:background="@drawable/edittext_shape"
         android:inputType="phone"
         app:layout_constraintEnd_toStartOf="@id/vertical_right"
@@ -80,13 +82,13 @@
         app:layout_constraintEnd_toStartOf="@id/vertical_right"
         app:layout_constraintStart_toEndOf="@id/vertical_left" />
 
-
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/ed_email"
         android:layout_width="@dimen/_0dp"
         android:layout_height="wrap_content"
         android:textSize="@dimen/_20sp"
         android:layout_marginTop="@dimen/_10dp"
+        android:padding="@dimen/_10dp"
         android:background="@drawable/edittext_shape"
         app:layout_constraintEnd_toStartOf="@id/vertical_right"
         app:layout_constraintStart_toEndOf="@id/vertical_left"
@@ -111,6 +113,7 @@
         android:layout_marginTop="@dimen/_10dp"
         android:background="@drawable/edittext_shape"
         android:inputType="textPassword"
+        android:padding="@dimen/_10dp"
         app:layout_constraintEnd_toStartOf="@id/vertical_right"
         app:layout_constraintStart_toEndOf="@id/vertical_left"
         app:layout_constraintTop_toBottomOf="@id/txt_password"/>
