--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="primary_app_color">#00a7fe</color>
     <color name="orange_app">#ffac7f</color>
+    <color name="background_cardview">#9A9697</color>
 </resources>
