--- a/app/src/main/res/layout/cart_product_item.xml
+++ b/app/src/main/res/layout/cart_product_item.xml
@@ -33,6 +33,17 @@
             app:layout_constraintTop_toTopOf="parent"/>
 
         <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/txt_totalPriceOfProduct"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/orange_app"
+            android:text="@string/_640"
+            style="@style/NavigationViewTextAppearance"
+            app:layout_constraintStart_toEndOf="@id/txt_nameOfProduct"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/txt_descriptionOfProduct"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
