--- a/app/src/main/res/layout/fragment_delivery.xml
+++ b/app/src/main/res/layout/fragment_delivery.xml
@@ -4,72 +4,64 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.fragment.CartFragment">
+    tools:context=".view.fragment.checkout.DeliveryFragment">
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/txt_totalBill"
+        android:id="@+id/txt_selectAddy"
         style="@style/NavigationViewTextAppearance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/total_bill_amount"
+        android:text="Select Delivery Address"
         app:layout_constraintStart_toEndOf="@id/vertical_left"
         app:layout_constraintTop_toBottomOf="@id/horizontal_up" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/txt_total"
-        style="@style/NavigationViewTextAppearance"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/_640"
-        android:textColor="@color/orange_app"
-        app:layout_constraintEnd_toStartOf="@id/vertical_right"
-        app:layout_constraintTop_toBottomOf="@id/horizontal_up" />
-
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rc_products"
+        android:id="@+id/rc_addresses"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="@dimen/_20dp"
-        tools:listitem="@layout/cart_product_item"
-        app:layout_constraintBottom_toTopOf="@id/btn_checkout"
-        app:layout_constraintTop_toBottomOf="@id/txt_totalBill" />
+        tools:listitem="@layout/address_item"
+        app:layout_constraintBottom_toTopOf="@id/btn_add_address"
+        app:layout_constraintTop_toBottomOf="@id/txt_selectAddy" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_checkout"
+        android:id="@+id/btn_add_address"
         style="@style/PrimaryButton"
+        app:layout_constraintBottom_toTopOf="@id/horizontal_down"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/checkout"
+        android:text="@string/add_address"
+        app:layout_constraintEnd_toStartOf="@id/btn_next"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_next"
+        style="@style/PrimaryButton"
         app:layout_constraintBottom_toTopOf="@id/horizontal_down"
-        app:layout_constraintEnd_toStartOf="@id/vertical_right"
-        app:layout_constraintStart_toEndOf="@id/vertical_left" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/next"
+        app:layout_constraintStart_toEndOf="@id/btn_add_address"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/horizontal_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.03" />
+        app:layout_constraintGuide_percent="0.05" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/vertical_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.048661802" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/vertical_right"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.96" />
+        app:layout_constraintGuide_percent="0.08" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/horizontal_down"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.93" />
+        app:layout_constraintGuide_percent="0.95" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
