--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -11,6 +11,7 @@
         android:id="@+id/txt_title"
         android:layout_marginTop="@dimen/_10dp"
         android:layout_marginStart="@dimen/_10dp"
+        android:text="@string/realme_nazro_50"
         android:textColor="@color/orange_app"
         style="@style/NavigationViewTextAppearance"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,6 +26,7 @@
         android:layout_marginEnd="@dimen/_10dp"
         android:layout_marginTop="@dimen/_10dp"
         android:layout_marginStart="@dimen/_10dp"
+        android:text="@string/dummy_text_description"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="0dp"
         android:layout_height="wrap_content"/>
@@ -34,6 +36,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="@dimen/_10dp"
+        android:src="@drawable/iphone_immmm"
         app:layout_constraintTop_toBottomOf="@id/txt_descriptionOfProduct"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
@@ -44,6 +47,7 @@
         android:layout_height="wrap_content"
         style="@style/NavigationViewTextAppearance"
         android:textColor="@color/orange_app"
+        android:text="@string/_640"
         android:layout_marginTop="@dimen/_10dp"
         app:layout_constraintEnd_toStartOf="@id/txt_addToCart"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,9 +59,60 @@
         android:layout_height="wrap_content"
         android:textColor="@color/primary_app_color"
         android:textSize="@dimen/_27sp"
-        android:layout_marginTop="@dimen/_10dp"
+        android:text="@string/add_to_cart"
         app:layout_constraintStart_toEndOf="@id/txt_priceOfProduct"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/img_product"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_addToCart"
+        app:layout_constraintTop_toBottomOf="@id/img_product"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/txt_priceOfProduct"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="wrap_content"
+        android:visibility="gone"
+        android:layout_marginTop="@dimen/_10dp"
+        android:layout_marginBottom="@dimen/_10dp"
+        android:layout_height="wrap_content">
+
+        <androidx.appcompat.widget.AppCompatButton
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/txt_quantitiy_cart"
+            android:id="@+id/btn_plus"
+            android:text="@string/add_plus"
+            android:textSize="@dimen/_17sp"
+            android:textColor="@color/white"
+            android:padding="4dp"
+            android:background="@color/primary_app_color"
+            android:layout_width="36dp"
+            android:layout_height="36dp"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btn_minus"
+            android:id="@+id/txt_quantitiy_cart"
+            android:textSize="@dimen/_17sp"
+            android:text="1"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
+            app:layout_constraintTop_toTopOf="@id/btn_minus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/btn_minus"
+            android:background="@color/primary_app_color"
+            android:textSize="@dimen/_17sp"
+            android:padding="4dp"
+            android:textColor="@color/white"
+            android:text="@string/cart_minus"
+            android:layout_width="36dp"
+            android:layout_height="36dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
