--- a/app/src/main/res/menu/drawer_items.xml
+++ b/app/src/main/res/menu/drawer_items.xml
@@ -20,5 +20,11 @@
         <item
             android:id="@+id/logout"
             android:title="@string/logout" />
+
+        <item
+            android:id="@+id/btn_switch"
+            android:title="@string/switch_theme"
+            android:actionLayout=""/>
+
     </group>
 </menu>
