--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.EcommerceApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
     </style>
 
     <style name="Theme.EcommerceApp" parent="Base.Theme.EcommerceApp" />
@@ -16,6 +15,8 @@
     <style name="NavigationViewTextAppearance">
         <item name="android:textSize">@dimen/_24sp</item>
     </style>
+
+    <style name="ThemeLight" parent="Theme.Material3.Light.NoActionBar"/>
 
 
 </resources>
