--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -65,6 +65,7 @@
         android:layout_marginTop="@dimen/_30dp"
         android:background="@color/background_cardview"
         android:elevation="@dimen/_10dp"
+        app:contentPadding="@dimen/_10dp"
         app:layout_constraintEnd_toStartOf="@id/vertical_right"
         app:layout_constraintStart_toEndOf="@id/vertical_left"
         app:layout_constraintTop_toBottomOf="@id/txt_deliveryAddy">
